[package]
name = "chinese-telegraph"
version = "0.2.2"
edition = "2021"
rust-version = "1.66"
description = "provides unicode to chinese telegraph code conversion."
keywords = ["chinese", "telegraph", "conversion", "i18n", "unicode"]
categories = ["text-processing", "encoding", "no-std"]
homepage = "https://github.com/milkcask/chinese-telegraph-rs"
repository = "https://github.com/milkcask/chinese-telegraph-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/chinese-telegraph"
include = ["src/*.rs", "tests/*.rs", "build.rs", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
phf = { version = "0.13", default-features = false, features = ["macros"] }

[features]
default = ["std"]
std = []
