[package]
name = "chinese-telegraph"
version = "0.3.1"
edition = "2021"
rust-version = "1.66"
description = "Convert Unicode Chinese characters to Chinese telegraph codes (中文電碼)"
keywords = ["chinese", "telegraph", "conversion", "i18n", "unicode"]
categories = ["text-processing", "encoding", "no-std"]
homepage = "https://github.com/milkcask/chinese-telegraph-rs"
repository = "https://github.com/milkcask/chinese-telegraph-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/chinese-telegraph"
include = ["src/*.rs", "tests/*.rs", "build.rs", "LICENSE-MIT", "LICENSE-APACHE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
phf = { version = "0.14", default-features = false, features = ["macros"] }

[features]
default = ["std", "telegraph-code", "code-str"]
std = []
telegraph-code = []
code-str = []
